--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "fastest-validator": "^1.15.0",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "yup": "^0.29.3"
