--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ali babaei",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
