--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "yup": "^0.29.3"
